--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "malisiajs",
-    "version": "1.1.1",
+    "version": "1.2.1",
     "description": "Simple recipes for building and compiling with the CLI.",
     "main": "./dist/malisia.cjs.min.js",
     "module": "./dist/malisia.es.min.js",
@@ -28,7 +28,7 @@
         "copywin": "cmd /c xcopy src\\copy\\. dist /s /e /y",
         "build": "npm run clean && npm run js && npm run css && npm run svg && npm run img && npm run copy",
         "buildwin": "cmd /c npm run cleanwin && npm run js && npm run css && npm run svg && npm run img && npm run copywin",
-        "debug": "npm run js && npm run copy"
+        "debug": "npm run js && npm run copywin"
     },
     "devDependencies": {
         "imagemin-cli": "^5.1.0",
